# Hypr-Vimx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  check_permissions.sh  run_with_logging.sh  start_ydotoold.sh  test_click.sh  test_right_click.sh
src/: config.rs  consts.rs  hints.rs  ipc.rs  lib.rs  mouse.rs  window_system.rs
src/backends/: atspi_backend.rs  mod.rs  opencv_backend.rs
src/ui/: overlay.rs
