[package]
name = "rust-hintsx"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hintsx"
path = "src/bin/hintsx.rs"

[[bin]]
name = "hintsd"
path = "src/bin/hintsd.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
regex = "1.11"
nix = { version = "0.28", features = ["socket", "uio", "poll"] }
evdev = "0.13"
tokio = { version = "1.40", features = ["net", "rt-multi-thread", "sync", "macros"] }
futures = "0.3"
tempfile = "3.10"
zbus = { version = "5.5", default-features = false, features = ["async-io"] }

# GUI / accessibility
gtk4 = { version = "0.10", package = "gtk4" }
gdk4 = { version = "0.10", package = "gdk4" }
gdk4-wayland = { version = "0.10", optional = true }
gdk4-x11 = { version = "0.10", optional = true }
gtk4-layer-shell = { version = "0.7.1", optional = true }
atspi = { version = "0.28", optional = true }

# Computer vision (optional)
opencv = { version = "0.92", optional = true }
image = { version = "0.25", optional = true }

[features]
default = ["wayland", "x11", "layer-shell", "atspi-backend", "opencv-backend"]
wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]
layer-shell = ["gtk4-layer-shell"]
opencv-backend = ["opencv", "image"]
atspi-backend = ["atspi"]
